media-server/calibre/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre
  namespace: media-server
spec:
  selector:
    matchLabels:
      app: calibre
  strategy:
    type: Recreate # This makes sure only one instance is running at a time
  template:
    metadata:
      labels:
        app: calibre
    spec:
      containers:
        - name: calibre
          image: lscr.io/linuxserver/calibre:7.13.0
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8181
              name: https
            - containerPort: 8081
              name: http-webserver
          volumeMounts:
            - name: config-pv
              mountPath: /config
      securityContext:
        fsGroup: 100
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: config-pv
          persistentVolumeClaim:
            claimName: calibre-config
