media-server/calibre/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre
  namespace: media-server
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
  - name: http-webserver
    port: 81
    targetPort: http-webserver
  selector:
    app: calibre
